New design update

--- a/web/GetBooks.html
+++ b/web/GetBooks.html
@@ -577,6 +577,24 @@ function getParameterByName(name, url) {
     return decodeURIComponent(results[2].replace(/\+/g, ' '));
 }
 
+function UpdateLinkPrev()
+{
+	    let val = document.getElementsByClassName("coollnklist");
+	    let page = window.location.hash.substr(5);
+	    if(page=="")
+		page=0;
+	    else
+		page=parseInt(page);
+	    for(let i = 0; i < val.length; i++)
+	    {
+		if(page<=val[i].dataset.page)
+		{
+		    val[i].scrollIntoView();
+		    return;
+		}
+
+	    }
+}
 function triggerDblclick(x)
 {
     var event = new MouseEvent('dblclick', {
@@ -615,6 +633,7 @@ function init() {
 	    {
 		triggerDblclick(val[0]);
 	    }
+	    UpdateLinkPrev();
 	}
     document.getElementById("OCRBuffer").onscroll = function() {
 	    console.log("Ocr scrolls now!");
@@ -626,6 +645,7 @@ function init() {
 	    let val = getVisiblePagesOCR();
 	    globalScrollLock = true; 
 	    triggerDblclick(val[0]);
+	    UpdateLinkPrev();
 	}
 
 	let parsedUrlParams = parseURLParams(window.location.href);
@@ -751,7 +771,7 @@ function init() {
 			  }
 			  else
 			  {
-										   resultLinks.innerHTML = resultLinks.innerHTML + " " + "<a class='coollnklist' onclick='document.getElementById(\"uniqueocrpage"+searchResults.pages[i].page+"\").scrollIntoView();window.location.replace(\"#page"+searchResults.pages[i].page+"\");changecolor(this);return true;' data-page='"+searchResults.pages[i].page+"'>" + searchResults.pages[i].page + " ("
+										   resultLinks.innerHTML = resultLinks.innerHTML + " " + "<a class='coollnklist' onclick='document.getElementById(\"uniqueocrpage"+searchResults.pages[i].page+"\").scrollIntoView();window.location.replace(\"#page"+searchResults.pages[i].page+"\");changecolor(this);return true;' data-page='"+searchResults.pages[i].page+"'>" + searchResults.pages[i].page + "("
 				  + "<span id='pageHitList"+searchResults.pages[i].page +"'>"					 
 				  + searchResults.pages[i].word + "</span>)</a>";
 			  }
@@ -834,9 +854,12 @@ window.addEventListener("load", init, false);
     grid-column: 1 /span 1;
     grid-row: 1 / span 1;
     margin: 0;
+    margin-left: 0.5rem;
     line-height: 2rem;
     background-color: white;
     padding-bottom: 2rem;
+    overflow: auto;
+    white-space: nowrap;
 }
 
 a:visited {
@@ -883,6 +906,7 @@ function changecolor(x)
 
 function shownone(x)
 {
+    document.getElementById("linklst").style["white-space"] = "nowrap";
     document.getElementById("upimg").style.display = "none";
     document.getElementById("downimg").style.display = "block";
     document.getElementById("divdrop").onclick = function(){showall(document.getElementById("SearchOpts"));};
@@ -895,6 +919,7 @@ function showall(x)
     if(x.style.height != "80vh")
     {
 	x.classList.replace("secondoptioncontlay","currentoptioncontlay");
+	document.getElementById("linklst").style["white-space"] = "normal";
 	document.getElementById("divdrop").onclick = function(){shownone(document.getElementById("SearchOpts"));};
 	document.getElementById("upimg").style.display = "block";
 	document.getElementById("downimg").style.display = "none";
