Changed name of search in to: show only books with/ without text

--- a/web/Search.html
+++ b/web/Search.html
@@ -863,9 +863,9 @@ function ShowLinks()
                     Before:
                     <input id='publicatedBefore' onchange='SetAdvancedDateBefore(this);return true;' class='specialultbut' style='background:white;margin-right:0.5;border:0;' size='5' type='number' step='1' min='0' value='2019'>
                     <select id='searchIn' onchange='SetAdvancedOnlyIn(this);return true;' class='specialultbut' style='background:white;margin-right:0.5;border:0;'>
-                        <option value='0'>Search Everything</option>
-                        <option value='1'>Search only Metadata</option>
-                        <option value='2'>Search only Text</option>
+                        <option value='0'>Show Everything</option>
+                        <option value='1'>Show only Books without Text</option>
+                        <option value='2'>Show only Books with Text</option>
                     </select>
                     <select id='fuzzyness' onchange='SetAdvancedFuzzy(this);return true;' class='specialultbut' style='background:white;margin-right:0.5;border:0;'>
                         <option value='0'>Exact matches</option>
