--- a/web/GetBooks.html
+++ b/web/GetBooks.html
@@ -220,7 +220,7 @@ body {
 	background-color: grey;
 	overflow: scroll;
 	margin: 0;
-	margin-top: 0.5rem;
+	top: 1rem;
 	padding: 0;
 }
 
@@ -804,7 +804,7 @@ window.addEventListener("load", init, false);
 .optioncont {
     display: block;
     margin: 0;
-    padding: 1rem;
+    padding: 0.5rem;
     background-color: white;
     overflow: scroll;
 }
