--- a/web/GetBooks.html
+++ b/web/GetBooks.html
@@ -801,7 +801,7 @@ window.addEventListener("load", init, false);
 <style>
 .pageContainer {
 	display: grid;
-	position; fixed;
+	position: fixed;
 	top: 0;
 	left: 0;
 	height: 100vh;
