--- a/web/Search.html
+++ b/web/Search.html
@@ -861,7 +861,7 @@ function ShowLinks()
                     <button class='specialultbut' style="background:white;border:0;" onclick='AddAdvancedBar();return true;'>Advanced Bar</button>
                 </div>
 
-                <div id="InnerResultBanner" style="display:none;margin-top:2rem;">
+                <div id="InnerResultBanner" style="display:block;margin-top:2rem;">
                     Author:
                     <input id='author' onchange="SetAdvancedAuthor(this);return true;" class="specialultbut" style="background:white;margin-right:0.5;border:0;" type="text" value=""> </input>
                     Collections:
