--- a/web/GetBooks.html
+++ b/web/GetBooks.html
@@ -512,7 +512,7 @@ let onChangeFunc = function() {};
 function ShowInfoText()
 {
 	//deleteAll();
-  	document.getElementsByClassName("pageContainer")[0].style["grid-template-columns"] = "60% 40% 0%";
+  	document.getElementsByClassName("pageContainer")[0].style["grid-template-columns"] = "60% 40%";
 	document.getElementById("InfoScreen").style.display = "inline-grid";
 	HighlightButton(document.getElementById("ShowInfoButton"));
 }
@@ -605,31 +605,8 @@ function init() {
 		});
 
 	    document.getElementById("thepagereader").onscroll = function() {
-	    if(globalScrollLock)
-	    { 
-		globalScrollLock = false;
-		return false;
-	    }
-	    console.log("Pages on scroll and focus!");
-		
-	    let val = getVisiblePages();
-	    globalScrollLock = true;
-	    triggerDblclick(val[0]);
-	    UpdateLinkPrev();
 	    updateAfterScroll();
 	    return false;
-	}
-    document.getElementById("OCRBuffer").onscroll = function() {
-	    console.log("Ocr scrolls now!");
-	    if(globalScrollLock)
-	    {
-		globalScrollLock = false;
-		return;
-	    }
-	    let val = getVisiblePagesOCR();
-	    globalScrollLock = true; 
-	    triggerDblclick(val[0]);
-	    UpdateLinkPrev();
 	}
 
 	let parsedUrlParams = parseURLParams(window.location.href);
@@ -781,6 +758,7 @@ window.addEventListener("load", init, false);
 	top: 0;
 	left: 0;
 	height: 100vh;
+	width: 100%;
 	grid-template-columns: 60% 40%;
 	background-color: grey;
 	overflow:hidden;
