--- a/web/GetBooks.html
+++ b/web/GetBooks.html
@@ -762,7 +762,7 @@ window.addEventListener("load", init, false);
 	width: 100%;
 	grid-template-columns: 60% 40%;
 	background-color: grey;
-	overflow:scroll;
+	overflow:hidden;
 }
 
 .optioncont {
@@ -776,7 +776,7 @@ window.addEventListener("load", init, false);
 .ocrdispstyle {
 	display:block;
 	width: 100%;
-	height: 100%;
+	height:60vh;
 	margin: 0;
 	margin-bottom: 0.5rem;
 	margin-top: 1rem;
