Fixed a bit more layout

--- a/web/GetBooks.html
+++ b/web/GetBooks.html
@@ -97,7 +97,6 @@ padding-right: 0;
 	display:block;
 	width: 100%;
 	margin: 0;
-	margin-bottom: 0.5rem;
 	margin-top: 1rem;
 	padding-right: 0;
 	background-color: grey;
@@ -164,7 +163,7 @@ a:active {
 }
 
 .secondoptioncontlay {
-    height: calc(2.3rem + 17px);
+    height: calc(1rem + 17px);
     transition-timing-function: ease-in-out;
     transition-duration: 1s;
 }
@@ -655,7 +654,7 @@ function SelectNextHit()
 </head>
 <body>
 	<div class="pageContainer">
-	    <div style='top: 0;display: inline-grid; grid-column: 2 /span 1;height:98vh;'> 
+	    <div style='top: 0;display: inline-grid; grid-column: 2 /span 1;height: 100vh;margin-bottom: 0;'> 
 	
 		<div id="SearchOpts" class="optioncont secondoptioncontlay" style='top: 0;background-color: white;overflow:scroll;'>
 		    
